# nitro-lang-processing-2

./: README.md  poetry.toml  pyproject.toml
data/: sample_submission.csv  test_data.csv
processed_data/: emoji_replacer.ipynb
src/: dan_main.ipynb  data.py  eda.ipynb  main.ipynb  models.py  mt5.ipynb  mt5_ro.ipynb  preprocess.py  spacy-sklearn.ipynb  train.py  utils.py
submissions/: submission_11.csv  submission_12.csv  submission_13.csv  submission_14.csv  submission_15.csv  submission_17.csv  submission_18.csv  submission_21.csv  submission_22.csv  submission_23.csv  submission_5.csv  submission_6.csv  submission_8.csv  submission_9.csv
