[tool.poetry]
name = "nitro-lang-processing-2"
version = "1.0.0"
description = "Hackathon repository for the NitroNLP competition"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "nitro_lang_processing_2"}]

[tool.poetry.dependencies]
python = "3.10.9"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
pandas = "^1.5.3"
scipy = "^1.10.1"
spacy = "^3.5.1"
nltk = "^3.8.1"
seaborn = "^0.12.2"
wordcloud = "^1.8.2.2"
tqdm = "^4.65.0"
boto3 = "^1.26.98"
requests = "^2.28.2"
regex = "^2023.3.23"
sentencepiece = "^0.1.97"
sacremoses = "^0.0.53"
ipykernel = "^6.22.0"
autopep8 = "^2.0.2"
nvitop = "^1.0.0"
torch = "2.0.0"
transformers = "^4.27.3"
torchtext = "^0.15.1"
lightning = "^2.0.0"
torchmetrics = "^0.11.4"
tokenizers = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
